# AndroidUSBCamera

./: 16KB_PAGE_SIZE_COMPLIANCE.md  CHANGELOG.md  GITHUB_PACKAGES_GUIDE.md  HOW_TO_USE_PACKAGES.md  ISSUE_RESOLVED.md  PUBLISHING_FIX.md  PUBLISH_SUMMARY.md  README_FORK.md  TROUBLESHOOT_401.md  WHY_CREDENTIALS_FAIL.md  build.gradle  check-publishing.sh  gradle.properties  verify-credentials.sh
.github/workflows/: publish.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/jiangdg/demo/: EffectListDialog.kt
app/src/main/java/com/jiangdg/utils/imageloader/: GlideLoader.kt
app/src/main/res/drawable/: bg_multi_camera_dialog.xml
gradle/wrapper/: gradle-wrapper.properties
libausbc/: build.gradle
libausbc/src/main/: AndroidManifest.xml
libausbc/src/main/java/com/jiangdg/ausbc/utils/: Utils.kt
libnative/: build.gradle
libnative/src/main/: AndroidManifest.xml
libnative/src/main/cpp/: CMakeLists.txt
libuvc/: build.gradle
libuvc/src/main/: AndroidManifest.xml
libuvc/src/main/jni/: Application.mk
